# mcp-oauth-joke-server

./: .env.example  .gitignore  README.md  docker-compose.yml  mcp-config.json  pyproject.toml  pytest.ini
.claude/: CLAUDE.md
scripts/: configure-keycloak.py  setup-keycloak.sh
src/joke_mcp_server/: __init__.py  auth.py  http_server.py  jokes.py  server.py
tests/: __init__.py  test_authorization.py  test_http_server.py  test_jokes.py
