[project]
name = "joke-mcp-server"
version = "0.1.0"
description = "MCP server providing dad and mom joke generation tools"
readme = "README.md"
authors = [
    { name = "Justin Winter", email = "justinlevi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
joke-server = "joke_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
